# office-tools

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  MAC_APP_GUIDE.md  PROJECT_VALIDATION_REPORT.md  QUICK_START.md  demo_conversion.py  pyproject.toml  readme.md  run_gui.py  run_gui_simple.py  setup_app.py  start_app.sh  test_gui_features.py  test_new_features.py  verify_installation.py  启动PDF转换工具.command
.augment/rules/imported/: pythonrules.md
cabinet_diagram_generator/: .$cabinet_diagram_20250925_082207.drawio.dtmp  .$cabinet_diagram_20250926_153237.drawio.dtmp  .gitignore  README.md  pyproject.toml
cabinet_diagram_generator/config/: field_mapping.yaml
cabinet_diagram_generator/docs/: architecture.md  user_manual.md
cabinet_diagram_generator/src/: __init__.py  config.py  config_manager.py  csv_processor.py  drawio_generator.py  layout_engine.py  main.py  models.py  utils.py
office2pdf/: ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  GUI_TROUBLESHOOTING.md  GUI_USER_GUIDE.md  MACOS_SECURITY_GUIDE.md  README.md  USER_MANUAL.md  __init__.py  config.py  converter.py  gui.py  office_to_pdf.py  office_to_pdf_optimized.py  run_gui.py  setup_app.py  utils.py  verify_installation.py
office2pdf/icons/: o2p_icon.icns
tests/: test_edge_labels.py
toptab/: README.md  pyproject.toml
toptab/config/: connection_metadata.json
toptab/input/: .$tyjtop.drawio.bkp  test.csv  test.drawio  test1.drawio  tyjtop.drawio
toptab/output/: test.csv  test.drawio  test.gbk.csv  test1.csv  test1.gbk.csv  tyjtop.csv
toptab/src/topotab/: __init__.py  __main__.py  cli.py  connection_config.py  connection_csv.py  connection_main.py  connection_parser.py  convert.py  csv_io.py  drawio_io.py  layout.py  models.py  schema.py  universal_csv.py  universal_drawio.py  universal_format.py
toptab/tamp/: csvtamp.csv
toptab/tests/: demo_simple_text.py  run_demo.py  test_edge_table_labels.py
