[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "toptab-tool"
version = "0.1.0"
description = "CSV and draw.io topology converter"
authors = [{ name = "Officetools" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12,<0.13",
    "rich>=13.7,<14.0"
]

[project.scripts]
toptab = "topotab.cli:app"

[tool.typer]
color = true

